--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,13 @@ readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
 
 [build-dependencies]
 chrono = { version = "0.4.23", features = ["serde"] }
 reqwest = { version = "0.11.14", features = ["json"] }
 serde = { version = "1.0.152", features = ["derive"] }
 tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"] }
+quote = "1.0.36"
+prettyplease = "0.2"
+syn = "2.0.75"
+proc-macro2 = "1.0.86"
